# cblaze-bot

./: .gitignore  CMakeLists.txt  bans.json  cblaze-autoupdate.sh  com.cpp  com.h  dashboard.html  main.cpp  messages.json  rulebreak-detec.cpp  rulebreak-detec.h  text-update.txt  warnings.json
systemd-things/: cblaze-autoupdate.service  cblaze-autoupdate.timer
